# Playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  start.sh  startHost.sh
cmajor_patches/Filter/: Filter.cmajor  Filter.cmajorpatch  Oscillators.cmajor
cmajor_patches/Synth/: Envelopes.cmajor  Filters.cmajor  GemUtilities.cmajor  Oscillators.cmajor  Synth.cmajor
old_cmajor_files/: CmajorProcessor.h  CmajorUI.h
patches/Filter/: Oscillators.cmajor
patches/Synth/: Envelopes.cmajor  Oscillators.cmajor  Synth.cmajor  Synth.cmajorpatch
pretty_neural_version/neural/: NeuralComponent.cpp  NeuralComponent.h  NeuralParameters.cpp  NeuralParameters.h  NeuralProcessor.cpp  NeuralProcessor.h
pretty_neural_version/neural/ui/: BackendSelector.h  CustomSliderLookAndFeel.h  DryWetSlider.cpp  DryWetSlider.h
source/: CmajorLoaderUI.h  CmajorProcessor.h  CmajorProcessorUI.h  CmajorUI.h  Panels.h  Parameters.h  Playground.cpp  Playground.h  Plugin.cpp  Plugin.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RAVE.cpp  Utils.h  cmaj_JUCEPlugin.h
source/cmajor/: CmajorProcessor.h
source/cmajor/patches/Filter/: Filter.cmajor  Filter.cmajorpatch
source/cmajor/patches/Synth/: Filters.cmajor  Synth.cmajor
source/neural/: CMakeLists.txt  ModelConfig.h  ModelPrePostProcessor.h  NeuralComponent.cpp  NeuralComponent.h  NeuralParameters.cpp  NeuralParameters.h  NeuralProcessor.cpp  NeuralProcessor.h  NeuralUI.h
source/neural/ui/: BackendSelector.cpp  BackendSelector.h  CustomSliderLookAndFeel.h  DryWetSlider.cpp  DryWetSlider.h
source/neural_configs/: HybridNN.h  RAVE.h
source/processors/: Base.h  Cmajor.h  CmajorProcessor.h  CmajorStereoDSPEffect.cpp  CmajorStereoDSPEffect.h  Compressor.h  Distortion.h  EQ.h  Gain.h  IIRFilter.h  Ladder.h  MultiTypeFilter.h  NNEngine.h  NeuralProcessor.h  PostProcessor.h  Rave.h
source/ui/: Cmajor.h  CmajorDragArea.h  Components.h  Distortion.h  Ladder.h  LowerPanel.h  SliderLookAndFeel.h
source/utils/: CircularBuffer.h  Components.h  FrequencyAnalyzer.h  GainMeter.h  Misc.h  Panels.h  Parameters.h  Scope.h  VisualizationManager.h  WaveshaperUI.h
